--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <p class="underground">We are interested in donating to people.We have adopted some programs to
                             donate.hope we can
                             successfully implement this program.</p>
-                    </div>
-                    <section>
-                        <div class="the-first" id="box-1"><img src="donate-today-main/icons/food.png" alt="">
+                    </div class="fex-box-container">
+                    <div>
+                        <div class="flex-box-1"><img src="donate-today-main/icons/food.png" alt="">
                             <h4 class="family">Food for a family</h4> We want to distribute financial assistance and
                             relief
                             materials to
@@ -66,9 +66,9 @@
                             their problems.We will give up our own happiness and share the suffering with the helpless
                             people.
                         </div>
-                    </section>
-                    <section>
-                        <div class="the-second" id="box-2"><img src="donate-today-main/icons/shelter.png" alt="">
+
+
+                        <div class="flex-box-2"><img src="donate-today-main/icons/shelter.png" alt="">
                             <h3 class="father">Shelter for a family</h3>We want to distribute financial assistance and
                             relief
                             materials to
@@ -79,9 +79,9 @@
                             their problems.We will give up our own happiness and share the suffering with the helpless
                             people.
                         </div>
-                    </section>
-                    <section>
-                        <div class="the-third" id="box-3"><img src="donate-today-main/icons/Frame-1.png" alt="">
+
+
+                        <div class="flex-box-3"><img src="donate-today-main/icons/Frame-1.png" alt="">
                             <h2 class="mother">Education for a child</h2>We want to distribute financial assistance and
                             relief
                             materials to
@@ -92,7 +92,7 @@
                             their problems.We will give up our own happiness and share the suffering with the helpless
                             people.
                         </div>
-                    </section>
+                    </div>
                 </section>
 
             </div>
