--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         <section class="small">
             <div class="small">
                 <h2>Donate Today</h2><br>
-                <p class="second-class">Lorem ipsum dolor sit amet,usu cu esse possit referrenture at eam falli
-                    deterruisset.No duo populo
-                    animal
-                    noluisse,enim</p>
+                <p class="second-class">Helping people is one of the big examples of humanity.We want to help people in
+                    their danger.We want to do something for people for which people will remember us for whole life.
+                </p>
                 <br><br>
                 <section class="the-upper">
                     <input class="me" type="button" value="100tk">
@@ -53,46 +52,59 @@
                         <p class="underground">We are interested in donating to people.We have adopted some programs to
                             donate.hope we can
                             successfully implement this program.</p>
-                    </div class="fex-box-container">
-                    <div>
-                        <div class="flex-box-1"><img src="donate-today-main/icons/food.png" alt="">
-                            <h4 class="family">Food for a family</h4> We want to distribute financial assistance and
-                            relief
-                            materials to
-                            fifty
-                            families.One of our team will help with this task.We have already listed all the families.We
-                            have decided that in any calamity we will stand by helpless people and always try to solve
-                            all
-                            their problems.We will give up our own happiness and share the suffering with the helpless
-                            people.
-                        </div>
-
-
-                        <div class="flex-box-2"><img src="donate-today-main/icons/shelter.png" alt="">
-                            <h3 class="father">Shelter for a family</h3>We want to distribute financial assistance and
-                            relief
-                            materials to
-                            fifty
-                            families.One of our team will help with this task.We have already listed all the families.We
-                            have decided that in any calamity we will stand by helpless people and always try to solve
-                            all
-                            their problems.We will give up our own happiness and share the suffering with the helpless
-                            people.
-                        </div>
-
-
-                        <div class="flex-box-3"><img src="donate-today-main/icons/Frame-1.png" alt="">
-                            <h2 class="mother">Education for a child</h2>We want to distribute financial assistance and
-                            relief
-                            materials to
-                            fifty
-                            families.One of our team will help with this task.We have already listed all the families.We
-                            have decided that in any calamity we will stand by helpless people and always try to solve
-                            all
-                            their problems.We will give up our own happiness and share the suffering with the helpless
-                            people.
-                        </div>
                     </div>
+                    <section>
+                        <div>
+                            <div class="flex-box-1"><img src="donate-today-main/icons/food.png" alt="">
+                                <h4 class="family">Food for a family</h4> We want to distribute financial assistance and
+                                relief
+                                materials to
+                                fifty
+                                families.One of our team will help with this task.We have already listed all the
+                                families.We
+                                have decided that in any calamity we will stand by helpless people and always try to
+                                solve
+                                all
+                                their problems.We will give up our own happiness and share the suffering with the
+                                helpless
+                                people.
+                            </div>
+
+
+                            <div class="flex-box-2"><img src="donate-today-main/icons/shelter.png" alt="">
+                                <h3 class="father">Shelter for a family</h3>We want to distribute financial assistance
+                                and
+                                relief
+                                materials to
+                                fifty
+                                families.One of our team will help with this task.We have already listed all the
+                                families.We
+                                have decided that in any calamity we will stand by helpless people and always try to
+                                solve
+                                all
+                                their problems.We will give up our own happiness and share the suffering with the
+                                helpless
+                                people.
+                            </div>
+
+
+                            <div class="flex-box-3"><img src="donate-today-main/icons/Frame-1.png" alt="">
+                                <h2 class="mother">Education for a child</h2>We want to distribute financial assistance
+                                and
+                                relief
+                                materials to
+                                fifty
+                                families.One of our team will help with this task.We have already listed all the
+                                families.We
+                                have decided that in any calamity we will stand by helpless people and always try to
+                                solve
+                                all
+                                their problems.We will give up our own happiness and share the suffering with the
+                                helpless
+                                people.
+                            </div>
+                        </div>
+                    </section>
                 </section>
 
             </div>
